updated top nav spacing issues with FF (display: table-cell) issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -4242,6 +4242,7 @@ select.unit-100 {
 
 .centered,
 .unit-centered {
+  display: block !important;
   float: none !important;
   margin: 0 auto !important;
 }
@@ -4794,7 +4795,7 @@ select.unit-100 {
 }
 
 /* =Pagination
-    -----------------------------------------------------------------------------*/
+-----------------------------------------------------------------------------*/
 .pagination {
   position: relative;
   left: -9px;
@@ -4835,7 +4836,7 @@ select.unit-100 {
 }
 
 /* =Responsive
-    -----------------------------------------------------------------------------*/
+-----------------------------------------------------------------------------*/
 @media only screen and (max-width: 767px) {
   .navbar-left,
   .navbar-right,
@@ -4864,8 +4865,8 @@ select.unit-100 {
 }
 
 /*
-    Navigation Styles
-    */
+Navigation Styles
+*/
 .nav-top {
   margin-top: 0;
 }
@@ -4934,7 +4935,7 @@ select.unit-100 {
 
 .nav-main {
   background: #3c0308;
-  height: 70px;
+  height: 72px;
 }
 
 .nav-main ul {
@@ -4958,49 +4959,49 @@ select.unit-100 {
   color: white;
   text-transform: uppercase;
   color: white;
-  padding: 22px 0 21px;
+  padding: 22px 0;
   text-transform: uppercase;
   -webkit-transition: color 0.2s;
   transition: color 0.2s;
   /*&:before {
-                    background: #D97B29;
+                background: #D97B29;
+                bottom: 0;
+                content: "";
+                color: #000;
+                height: 3px;
+                left: 30%;
+                position: absolute;
+                width: 0;
+            }
+
+
+            &.active:before {
+                background: #D97B29;
+                bottom: 0;
+                content: "";
+                height: 3px;
+                left: 30%;
+                position: absolute;
+                width: 45%;
+            }
+            &.active:hover {
+                cursor: default;
+                opacity: 1;
+            }
+
+            &:hover {
+                opacity: 1;
+
+                &:before {
+                    border-bottom: 3px solid #D97B29;
                     bottom: 0;
                     content: "";
                     color: #000;
-                    height: 3px;
-                    left: 30%;
-                    position: absolute;
-                    width: 0;
-                }
-
-
-                &.active:before {
-                    background: #D97B29;
-                    bottom: 0;
-                    content: "";
-                    height: 3px;
                     left: 30%;
                     position: absolute;
                     width: 45%;
                 }
-                &.active:hover {
-                    cursor: default;
-                    opacity: 1;
-                }
-
-                &:hover {
-                    opacity: 1;
-
-                    &:before {
-                        border-bottom: 3px solid #D97B29;
-                        bottom: 0;
-                        content: "";
-                        color: #000;
-                        left: 30%;
-                        position: absolute;
-                        width: 45%;
-                    }
-                }*/
+            }*/
 }
 
 .nav-main ul a:hover {
@@ -5086,6 +5087,27 @@ select.unit-100 {
   margin: 2px auto;
 }
 
+.list-block-nav a {
+  font-family: "montserratbold";
+  font-size: .7rem;
+  letter-spacing: .1em;
+  text-transform: uppercase;
+}
+
+.sticky {
+  background: rgba(0, 0, 0, 0.05);
+  margin-left: -2em;
+  margin-right: -2em;
+}
+
+.sticky a {
+  padding: 1rem 0;
+}
+
+.sticky a:hover {
+  background: rgba(0, 0, 0, 0.065);
+}
+
 .subpage .banner h2 {
   bottom: 0;
   color: white;
@@ -5122,6 +5144,7 @@ select.unit-100 {
 .banner-wrap {
   overflow: hidden;
   position: relative;
+  top: -1px;
   width: 100%;
   height: 480px;
 }
@@ -5177,6 +5200,10 @@ select.unit-100 {
   -ms-transition: all 0.5s ease-out;
   -o-transition: all 0.5s ease-out;
   transition: all 0.5s ease-out;
+}
+
+.subpage .banner-head-wrap .banner-head {
+  bottom: 0;
 }
 
 .banner-head-wrap h1 {
@@ -6573,11 +6600,15 @@ p, a {
 .divider {
   border-top: 1px solid rgba(0, 0, 0, 0.05);
   border-bottom: 1px solid transparent;
-  margin: 2em 0 3.6em;
-  max-width: 80%;
+  margin: 2em auto 2em;
+  width: 300px;
 }
 
 .list-block .unit-50:nth-child(odd) {
+  margin-left: 0;
+}
+
+.list-block .unit-33:nth-child(3n+4) {
   margin-left: 0;
 }
 
@@ -6648,6 +6679,15 @@ li {
 
 main .row {
   padding-top: 3em;
+}
+
+.centered-content h1, .centered-content h2, .centered-content h3, .centered-content h4, .centered-content p, .centered-content ul, .centered-content li {
+  text-align: center;
+}
+
+.centered-content img {
+  display: block;
+  margin: 0 auto 2rem;
 }
 
 .content-item .episode .podcast_name,
