--- a/scss/_banner.scss
+++ b/scss/_banner.scss
@@ -39,6 +39,7 @@
 .banner-wrap {
   overflow: hidden;
   position: relative;
+  top: -1px;
   width: 100%;
   height: 480px;
 
